# chat-p2p

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.jsx  App.tsx  index.css  types.ts  useP2P.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/src/: main.rs  state.rs
src-tauri/crates/p2p-application/: Cargo.toml  tauri.conf.json
src-tauri/crates/p2p-application/src/: fs.rs  p2p.rs  state.rs  types.rs
src-tauri/crates/p2p-core/: Cargo.toml
src-tauri/crates/p2p-core/src/: lib.rs
src-tauri/crates/p2p-discovery/: Cargo.toml
src-tauri/crates/p2p-discovery/src/: lib.rs
src-tauri/crates/p2p-nat/: Cargo.toml
src-tauri/crates/p2p-nat/src/: lib.rs
src-tauri/crates/p2p-transport/: Cargo.toml
src-tauri/crates/p2p-transport/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  p2p.rs  state.rs  types.rs
src/components/: Channel.tsx  ChannelsList.tsx  ModalAddPeer.tsx  ModalAddTopic.tsx  ModalConnectPeer.tsx  UserList.tsx
