[workspace]
resolver = "2"

members = [
    "app", 
    "crates/p2p-core",
    "crates/p2p-discovery",
    "crates/p2p-nat", 
    "crates/p2p-transport",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
libp2p = { version = "0.56", features = ["full"] }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-opener = "2"
