[package]
name = "chat-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# módulos internos
p2p-core = { path = "../crates/p2p-core" }
p2p-nat = { path = "../crates/p2p-nat" }
p2p-discovery = { path = "../crates/p2p-discovery" }
p2p-transport = { path = "../crates/p2p-transport" }