[package]
name = "p2p-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
p2p-core = { path = "../p2p-core" }
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
