[package]
name = "p2p-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
p2p-core = { path = "../p2p-core" }
p2p-transport = { path = "../p2p-transport" }
p2p-nat = { path = "../p2p-nat" }
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
wincode = { version = "0.4.5", features = ["derive"] }
